// Copyright 2023-2025 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package tests.example.v1;

import "buf/validate/validate.proto";

message InvalidRules {
  option (buf.validate.message).cel = {
    id: "message_rule"
    message: "this message rule is invalid"
    expression: "this.invalid"
  };

  int32 field = 1 [(buf.validate.field).cel = {
    id: "field_rule"
    message: "this field rule is invalid"
    expression: "this.invalid"
  }];
}

message AllRuleTypes {
  option (buf.validate.message).cel = {
    id: "message_rule"
    message: "this message rule always fails"
    expression: "false"
  };

  int32 field = 1 [(buf.validate.field).cel = {
    id: "field_rule"
    message: "this field rule always fails"
    expression: "false"
  }];

  oneof required_oneof {
    option (buf.validate.oneof).required = true;
    string oneof_field = 2;
  }
}

message NestedRules {
  AllRuleTypes field = 1 [(buf.validate.field).cel = {
    id: "parent_field_rule"
    message: "this field rule always fails"
    expression: "false"
  }];

  string field2 = 2 [(buf.validate.field).cel = {
    id: "parent_field_2_rule"
    message: "this field rule always fails"
    expression: "false"
  }];

  repeated AllRuleTypes repeated_field = 3;

  map<string, AllRuleTypes> map_field = 4;

  oneof required_oneof {
    option (buf.validate.oneof).required = true;
    string oneof_field = 5;
  }
}
