// Copyright 2023-2024 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package tests.example.v1;

import "buf/validate/validate.proto";

// https://github.com/bufbuild/protovalidate-go/issues/148
message Issue148 {
  optional int32 test = 1 [
    (buf.validate.field).int32.(abs_not_in) = 1,
    (buf.validate.field).int32.(abs_not_in) = -2
  ];
}

extend buf.validate.Int32Rules {
  repeated int32 abs_not_in = 1800 [(buf.validate.predefined).cel = {
    id: "int32.abs_not_in"
    expression: "this in rule || this in rule.map(n, -n)"
    message: "value must not be in absolute value of list"
  }];
}
